# mit_ai_agents_hw1

./: pyproject.toml  summary_of_learnings.md
outputs/: advisor_interview_prep.md  advisor_introduction.md  novice_background.md  novice_study_guide.md
src/mit_hw1/: crew.py  main.py
src/mit_hw1/config/: agents.yaml  tasks.yaml
